<resources>
    <string name="app_name">KartWheel</string>
    <string name="players_title">Players:</string>
    <string name="mini_game_title">Play mini games for more points &amp; more fun!</string>
    <string name="onboarding_started_title">Welcome to KartWheel!</string>
    <string name="onboarding_started_description">Fire shells from your phone while racing friends.</string>
    <string name="onboarding_started_button">Get started</string>
    <string name="onboarding_selfie_title">Take a selfie</string>
    <string name="onboarding_selfie_description">Brush your hair and smile big. This is the photo
        everyone will see while you\'re racing with Kartwheel!</string>
    <string name="onboarding_selfie_button">I look great</string>
    <string name="onboarding_selfie_tap_to_change">Tap to change</string>
    <string name="onboarding_pick_buddy_title">Pick a buddy!</string>
    <string name="onboarding_pick_buddy_description">If he\'s not moving on the map, you\'re not moving
    in the game! Know that he\'ll be racing alongside you as you\'re kicking ass and taking names.</string>
    <string name="onboarding_pick_buddy_button">I love \'em</string>
    <string name="onboarding_buddy_explanation_title">Buddies are really important</string>
    <string name="onboarding_buddy_explanation_description">You made a great choice, but there\'s more.
    If you ever drop your buddy, you *must* go back and pick them up! If you get hit by a shell, we
    may knock your buddy back - go and get \'em!</string>
    <string name="onboarding_buddy_explanation_button">I get it</string>
    <string name="onboarding_points_title">Race to earn medals &amp; ribbons</string>
    <string name="onboarding_points_description">Once you get into the race list, find the races you
    want to run in, and click \'Join\'! Make sure you\'re at the start line at gun-time - computers
    don\'t wait for anybody&#8230;</string>
    <string name="onboarding_points_button">Next</string>
    <string name="onboarding_make_it_rain">(Tap fast to make it rain more &#8230;)</string>
    <string name="onboarding_video_title">Everything you need to know</string>
    <string name="onboarding_video_description">In a short, awesome video.</string>
    <string name="onboarding_video_button">Let\'s go!</string>
    <string name="location_permission_dialog_title">Location Permissions Required</string>
    <string name="location_permission_dialog_message">We use your location to show your avatar on the map while you run!</string>
    <string name="finished">Finished</string>
    <string name="registered">Registered %1$s</string>
    <string name="registration_closed">Registration is closed</string>
    <string name="race_full">Race is full!</string>
    <string name="spots_left">%1$d spots left</string>
    <string name="spots_available">+ %1$d Spots Available</string>
    <string name="race_name">#%1$d - %2$s</string>
    <string name="race_details">%1$d laps | %2$.3f miles</string>
    <string name="start_race">Start the race!</string>
    <string name="battery_life_text">Charge up! You need 20% to run a race!</string>
    <string name="race_count_down_title">Race starts in:</string>
    <string name="top_course_times_title">Top course times:</string>
    <string name="logout_title">Logout?</string>
    <string name="logout">Logout</string>
    <string name="support_email">support@handstandwith.us</string>
    <string name="already_claimed_title">Invalid ticket</string>
    <string name="contact_us_subject_line">KartWheel - Android</string>
    <string name="contact_us_body">My ticket was already claimed! %s$1</string>
    <string name="scroll_down">Scroll down</string>
    <string name="critical_information">Critical information</string>
    <string name="pancakes_waffles">Pancakes or Waffles?</string>
    <string name="charmander_squirtle">Charmander or Squirtle?</string>
    <string name="furby_tamagachi">Furby or Tamagachi?</string>
    <string name="next">Next</string>
    <string name="first_name">FIRST</string>
    <string name="last_name">LAST</string>
    <string name="email">EMAIL</string>
    <string name="cell">CELL #</string>
    <string name="dob">DOB (MM/DD/YYYY)</string>
    <string name="nickname">NICKNAME (MAKE IT GOOD)</string>
    <string name="welcome">Welcome</string>
    <string name="im_ready">I\'m ready</string>
    <string name="contact_us">Contact us</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="tos">Terms &amp; Conditions</string>
    <string name="enter_code">Enter your ticket code</string>
    <string name="your_team">Your team</string>
    <string name="where_when">When &amp; Where</string>
    <string name="the_items">The items</string>
    <string name="event_when_where">Meet at Hellman Hollow, May 13th, at high noon. Do NOT be late,
        and wear your finest costumed athletic attire.</string>
    <string name="event_banana">The attackee must stop running and play the infamous reorientation game!</string>
    <string name="event_acorn">Toss an acorn, eat a rabbit. Acorns will do other things that you knew could happen.</string>
    <string name="event_earthquake">Everybody in the race - except for the attacker - must stop running and
    record a 12s video answering our ridiculous prompt (TODO: WHAT ELSE DOES THIS SAY)</string>
    <string name="banana">Banana</string>
    <string name="acorn">Acorn</string>
    <string name="earthquake">Earthquake</string>
    <string name="does_not_have_code">Don\'t have code? You\'ll either need to\n phone a friend
    or <a href="https://handstandwith.us/kartwheel">get one online</a>!</string>
    <string name="already_claimed_explanation">Someone has already claimed this ticket! In order to use this code,
    they\'ll need to open up their app and forfeit their ticket.\n\nSo you\'re sure this is your ticket?</string>
    <string name="already_claimed_touch_here">Log in by touching here!</string>
    <string name="try_different_code">Try different code</string>
    <string name="logout_description">Make sure you remember, copy, or screen shot your code! It\'s your only way back in.</string>
    <string name="forfeit_description">If you forfeit your ticket, you will be removed entirely from the game. You may
    give your ticket code to a friend!\n\nThey can download the app and use the code to get started. Lucky them&#8230;</string>
    <string name="copy_code">Copy your code:\u0020</string>
    <string name="code_copied">Code copied!</string>
    <string name="need_selfie">Need a selfie, brah!</string>
    <string name="wait_for_selfie_upload">Patience is key&#8230;Please wait for selfie to upload</string>
    <string name="selfie_upload_failed">Unable to upload selfie. Please check your network and try again.</string>
    <string name="need_buddy">You need to pick a buddy before continuing!</string>
    <string name="buddy_upload_failed">Unable to pick your buddy! Please check your network and try again.</string>
    <string name="unclaimed_ticket">UNCLAIMED </string>
    <string name="forfeit_ticket">Forfeit ticket</string>
    <string name="forfeit_ticket_title">Forfeit ticket?</string>
    <string name="keep_ticket">Keep my ticket</string>
    <string name="share_code">Share ticket code</string>
</resources>