<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            style="@style/GameInfoTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_team" />

        <us.handstand.kartwheel.layout.GameInfoPlayerView
            android:id="@+id/playerOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:visibility="gone"
            app:isUser="true"
            app:playerName="Matthew Ott"
            app:playerNumber="1"
            tools:visibility="visible" />

        <us.handstand.kartwheel.layout.GameInfoPlayerView
            android:id="@+id/playerTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:visibility="gone"
            app:isUser="false"
            app:playerName="Gil Levy"
            app:playerNumber="2"
            tools:visibility="visible" />

        <TextView
            style="@style/GameInfoTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/where_when" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/event_when_where" />

        <TextView
            style="@style/GameInfoTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_items" />

        <us.handstand.kartwheel.layout.ItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:description="@string/event_banana"
            app:src="@mipmap/item_banana"
            app:title="@string/banana" />

        <us.handstand.kartwheel.layout.ItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:description="@string/event_acorn"
            app:src="@mipmap/red_turtle"
            app:title="@string/acorn" />

        <us.handstand.kartwheel.layout.ItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:description="@string/event_earthquake"
            app:src="@mipmap/item_earthquake"
            app:title="@string/earthquake" />

    </LinearLayout>
</ScrollView>
