<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/additionalButton"
        android:layout_alignParentTop="true"
        android:background="@drawable/background_code_input"
        android:elevation="5dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_claimed_explanation" />

        <TextView
            android:id="@+id/alreadyClaimedLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="center_horizontal"
            android:text="@string/already_claimed_touch_here"
            android:textColor="@color/red" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/additionalButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:enabled="false"
        android:text="@string/contact_us"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/green" />
</RelativeLayout>
