<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/onboardingBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/titleContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <us.handstand.kartwheel.layout.KartTextView
                android:id="@+id/pageNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                app:typeface="bold"
                tools:text="2 of 5" />

            <us.handstand.kartwheel.layout.KartTextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:textSize="37dp"
                app:typeface="zamenhof"
                tools:text="@string/onboarding_pick_buddy_title" />

            <us.handstand.kartwheel.layout.KartTextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:textSize="18dp"
                tools:text="@string/onboarding_pick_buddy_description" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/fragment"
            android:name="us.handstand.kartwheel.fragment.onboarding.PickBuddyFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/button"
            android:layout_below="@+id/titleContainer"
            tools:layout="@layout/fragment_onboarding_circle_image" />

        <us.handstand.kartwheel.layout.KartButton
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/makeItRainDescription"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/button_long"
            android:enabled="true"
            android:padding="16dp"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            android:textSize="34dp"
            app:backgroundTint="@android:color/white"
            app:typeface="zamenhof"
            tools:text="@string/onboarding_pick_buddy_button" />

        <us.handstand.kartwheel.layout.KartTextView
            android:id="@+id/makeItRainDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:gravity="center_horizontal"
            android:text="@string/onboarding_make_it_rain"
            android:textColor="@android:color/white"
            android:textSize="13dp" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@android:color/white"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:behavior_skipCollapsed="true"
        app:layoutManager="GridLayoutManager"
        app:layout_behavior="BottomSheetBehavior"
        app:spanCount="3"
        tools:listitem="@layout/recycler_view_item_buddy" />

    <FrameLayout
        android:id="@+id/videoSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:behavior_skipCollapsed="true"
        app:layout_behavior="BottomSheetBehavior">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/video"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>